assets/css/main.css
/* ... */
@media screen and (max-width: 736px) {

  .features {
    width: 100%;
    margin: 0 0 2em 0;
  }

  .features li {
    width: 100%;
    margin-left: 0;
    margin-top: 2em;
  }

  .features li:nth-child(2), .features li:nth-child(3) {
    margin-top: 2em;
  }

}

/* Statistics */

.statistics {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  width: 100%;
  margin: 0 0 3em 0;
  padding: 0;
  list-style: none;
  cursor: default;
}

.statistics li {
  -moz-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.5em;
  color: #ffffff;
  text-align: center;
}

.statistics li.style1 {
  background-color: #efa8b0;
}

.statistics li.style2 {
  background-color: #c79cc8;
}

.statistics li.style3 {
  background-color: #a89cc8;
}

.statistics li.style4 {
  background-color: #9bb2e1;
}

.statistics li.style5 {
  background-color: #8cc9f0;
}

.statistics li strong, .statistics li b {
  display: block;
  font-size: 2em;
  line-height: 1.1;
  color: inherit !important;
  font-weight: 300;
  letter-spacing: -0.025em;
}

.statistics li:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.statistics li:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.statistics li .icon {
  display: inline-block;
}

.statistics li .icon:before {
  font-size: 2.75rem;
  line-height: 1.3;
}

@media screen and (max-width: 980px) {

  .statistics li strong, .statistics li b {
    font-size: 1.5em;
  }

}

@media screen and (max-width: 736px) {

  .statistics {
    display: block;
    width: 20em;
    max-width: 100%;
    margin: 0 auto 2em auto;
  }

  .statistics li:first-child {
    border-bottom-left-radius: 0;
    border-top-right-radius: 8px;
  }

  .statistics li:last-child {
    border-top-right-radius: 0;
    border-bottom-left-radius: 8px;
  }

  .statistics li .icon:before {
    font-size: 3.75rem;
  }

  .statistics li strong, .statistics li b {
    font-size: 2.5em;
  }

}

/* Spotlight */

.spotlight {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: start;
  margin: 0 0 2em 0;
}

.spotlight .content {
  -moz-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.spotlight .content > :last-child {
  margin-bottom: 0;
}

.spotlight .content header.major {
  margin: 0 0 2em 0;
}

.spotlight .image {
  display: inline-block;
  margin-left: 4em;
  padding: 0.65em;
  border-radius: 100%;
  border: solid 1px;
}

.spotlight .image img {
  display: block;
  border-radius: 100%;
  width: 16em;
}

.spotlight .basic-image {
  display: inline-block;
  margin-left: 2em;
  border: solid 1px #ddd;
  border-radius: 2%;
  width: 28em;
}

@media screen and (max-width: 980px) {

  .spotlight {
    -moz-flex-direction: column-reverse;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    text-align: center;
  }

  .spotlight .content {
    -moz-flex: 0 1 auto;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    width: 100%;
  }

  .spotlight .content header.major h2:after {
    margin-left: auto;
    margin-right: auto;
  }

  .spotlight .content .actions {
    -moz-justify-content: center;
    -webkit-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    width: calc(100% + 1em);
  }

  .spotlight .image {
    -moz-flex: 0 1 auto;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    margin-left: 0;
    margin-bottom: 2em;
  }
}

@media screen and (max-width: 736px) {

  .spotlight .image {
    padding: 0.35em;
  }

  .spotlight .image img {
    width: 12em;
  }
}

.spotlight .image {
  border-color: rgba(255, 255, 255, 0.35);
}

/* Header */

#header {
  padding: 5em 5em 1em 5em ;
  text-align: center;
}

#header h1 {
  margin: 0 0 0.25em 0;
}

#header p {
  font-size: 1.25em;
  letter-spacing: -0.025em;
}

#header.alt {
  padding: 3em 5em 1em 5em;
}

#header.alt h1 {
  font-size: 3em;
}

#header.alt p {
  margin-bottom: 1em;
}

#header.alt ul {
  margin-bottom: 1em;
}

#header.alt .logo {
  -moz-transition: opacity 1.25s ease, -moz-transform 0.5s ease;
  -webkit-transition: opacity 1.25s ease, -webkit-transform 0.5s ease;
  -ms-transition: opacity 1.25s ease, -ms-transform 0.5s ease;
  transition: opacity 1.25s ease, transform 0.5s ease;
  -moz-transition-delay: 0s;
  -webkit-transition-delay: 0s;
  -ms-transition-delay: 0s;
  transition-delay: 0s;
  display: block;
  margin: 0 0 1.5em 0;
}

#header.alt .logo img {
  display: block;
  margin: 0 auto;
  max-width: 75%;
}

@media screen and (max-width: 1280px) {

  #header {
    padding: 4em 4em 0.1em 4em ;
  }

  #header.alt {
    padding: 3em 4em 1em 4em ;
  }

}

@media screen and (max-width: 980px) {

  #header {
    padding: 4em 3em 0.1em 3em ;
  }

  #header.alt {
    padding: 3em 3em 1em 3em ;
  }

}

@media screen and (max-width: 736px) {

  #header {
    padding: 3em 2em 0.1em 2em ;
  }

  #header p {
    font-size: 1em;
    letter-spacing: 0;
  }

  #header p br {
    display: none;
  }

  #header.alt {
    padding: 3em 2em 1em 2em;
  }

  #header.alt h1 {
    font-size: 2.5em;
  }

}

@media screen and (max-width: 480px) {

  #header {
    padding: 3em 1.5em 0.1em 1.5em ;
  }

  #header.alt {
    padding: 3em 1.5em 1em 1.5em;
  }

}

@media screen and (max-width: 360px) {

  #header {
    padding: 2.5em 1em 0.1em 1em ;
  }

  #header.alt {
    padding: 3em 1em 0.5em 1em;
  }

}
/* ... */

